# xml-html-qq

./: .travis.yml  README.md  shell.nix  stack.yaml  xml-html-qq.cabal
src/Text/HTML/: QQ.hs
src/Text/XML/: QQ.hs
src/Text/XMLHTML/: Internal.hs
test/: Spec.hs
